--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "devDependencies": {
     "@dfinity/agent": "0.6.21",
     "terser-webpack-plugin": "2.2.2",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "webpack": "4.41.3",
     "webpack-cli": "3.3.10"
+  },
+  "dependencies": {
+    "@dfinity/authentication": "0.0.0-pre.identity-provider.7"
   }
 }
