--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.6.21",
+    "@dfinity/agent": "0.0.0-identity-provider.0",
     "terser-webpack-plugin": "2.2.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -15,6 +15,7 @@
     "webpack-cli": "3.3.10"
   },
   "dependencies": {
-    "@dfinity/authentication": "^0.0.0-pre.identity-provider.9"
+    "@dfinity/authentication": "0.0.0-identity-provider.0",
+    "tweetnacl": "^1.0.3"
   }
 }
