--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier:write": "npm run prettier -- --write"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.6.21",
+    "@dfinity/agent": "0.0.0-identity-provider.0",
     "terser-webpack-plugin": "2.2.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -17,6 +17,7 @@
     "webpack-cli": "3.3.10"
   },
   "dependencies": {
-    "@dfinity/authentication": "^0.0.0-pre.identity-provider.9"
+    "@dfinity/authentication": "0.0.0-identity-provider.0",
+    "tweetnacl": "^1.0.3"
   }
 }
