--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "keywords": [],
   "scripts": {
     "build": "webpack",
+    "lint": "npm run eslint && npm run prettier",
+    "eslint": "eslint 'src' --ext '.js,.jsx,.ts,.tsx'",
+    "eslint:fix": "npm run lint -- --fix",
     "prettier": "prettier 'src/whoami_assets/**/*.(ts|tsx|js|jsx)' --check",
     "prettier:write": "npm run prettier -- --write"
   },
   "devDependencies": {
     "@dfinity/agent": "0.0.0-identity-provider.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-jsdoc": "^31.6.1",
     "terser-webpack-plugin": "2.2.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -19,5 +26,31 @@
   "dependencies": {
     "@dfinity/authentication": "0.0.0-identity-provider.0",
     "tweetnacl": "^1.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:jsdoc/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint",
+      "jsdoc"
+    ],
+    "rules": {
+      "jsdoc/newline-after-description": "off",
+      "jsdoc/require-returns-type": "off",
+      "jsdoc/require-param-type": "off",
+      "jsdoc/require-jsdoc": [
+        "error",
+        {
+          "publicOnly": true
+        }
+      ],
+      "jsdoc/require-returns": "off",
+      "jsdoc/require-returns-description": "warn"
+    }
   }
 }
