--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "jsdoc/require-jsdoc": [
         "error",
         {
-          "publicOnly": true
+          "publicOnly": false
         }
       ],
       "jsdoc/require-returns": "off",
