--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prettier:write": "npm run prettier -- --write"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.0.0-identity-provider.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
@@ -24,7 +23,8 @@
     "webpack-cli": "3.3.10"
   },
   "dependencies": {
-    "@dfinity/authentication": "0.0.0-identity-provider.0",
+    "@dfinity/agent": "0.6.25-beta.0",
+    "@dfinity/authentication": "0.6.25-beta.0",
     "tweetnacl": "^1.0.3"
   },
   "eslintConfig": {
